image aspect ratio fix
image aspect ratios in about me section were messed up, fixed by defining height as auto.

--- a/style/main.scss
+++ b/style/main.scss
@@ -518,8 +518,8 @@ p {
       border-color: #ff9800;
       img {
         position: relative;
-        width: 60%;
-        height: 70%;
+        width: 70%;
+        height: auto;
         top: calc(50% - 35%);
         left: calc(50% - 35%);
       }
@@ -531,7 +531,7 @@ p {
       img {
         position: relative;
         width: 70%;
-        height: 70%;
+        height: auto;
         top: calc(50% - 35%);
         left: calc(50% - 35%);
       }
@@ -543,7 +543,7 @@ p {
       img {
         position: relative;
         width: 70%;
-        height: 70%;
+        height: auto;
         top: calc(50% - 35%);
         left: calc(50% - 35%);
       }
